# SHRINE

./: README.md  setup.cfg  setup.py
pipeline/: .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  README  do_all.sh  nextflow.config  optimise_DM.nf  setup.sh  setup_oz313.sh
pipeline/.nextflow/: history
pipeline/.nextflow/cache/03ab1672-0e04-407e-b1c9-8d6384ff30bf/: index.berserk_mclean
pipeline/.nextflow/cache/04f86b18-a0ba-4ced-a364-d6632e3d36f6/: index.lonely_baekeland
pipeline/.nextflow/cache/0a4d5193-2a97-4769-8077-00438e34d415/: index.marvelous_hamilton
pipeline/.nextflow/cache/0d4bab4c-7b41-4d32-b6b5-2b305c681ed9/: index.furious_monod
pipeline/.nextflow/cache/124a000b-6fea-420e-8659-8f75aa00c62f/: index.gigantic_kowalevski
pipeline/.nextflow/cache/1526137b-d5dd-4f74-9b23-4b1c661b785c/: index.cheesy_mirzakhani
pipeline/.nextflow/cache/16dc1dc2-5e44-46ad-93da-acff8e40e98d/: index.nauseous_ekeblad
pipeline/.nextflow/cache/1825ffbe-8863-4df6-b3d0-819d3a995f90/: index.spontaneous_wiles
pipeline/.nextflow/cache/1dc0ad28-05fd-4411-afe3-4ff8512bd48a/: index.big_heyrovsky
pipeline/.nextflow/cache/1eb66c54-6035-482d-beaf-a959af2fe3d7/: index.thirsty_babbage
pipeline/.nextflow/cache/204c616c-9d3b-42bf-bcae-59480dfc6ce8/: index.marvelous_montalcini
pipeline/.nextflow/cache/23aaea89-ffe6-4015-876d-0172067701ba/: index.compassionate_angela
pipeline/.nextflow/cache/273f8c5e-e909-4e04-af06-065d7923beb4/: index.fabulous_hoover
pipeline/.nextflow/cache/27a91b0c-c22b-4b11-8662-86fd46f5cc7a/: index.tender_goodall
pipeline/.nextflow/cache/27bb37e1-2e26-4d65-b74a-31e59ed24d4a/: index.wise_goldberg
pipeline/.nextflow/cache/2ae2d717-ff85-4176-8025-06e17363c1ff/: index.nostalgic_cajal
pipeline/.nextflow/cache/2b09b4b5-5492-4736-a4cf-c078d83e7217/: index.extravagant_wescoff
python/: generate_profiles.py  maximise_structure.py
(+69 files in other folders)
