[metadata]
name = SHRINE
description = Python code for structure-maximised DM (and error) estimates
long_description = file: README.md LICENSE.rst
long_description_content_type = text/markdown
author = Timothy Perrott. Marcin Glowacki and Clancy James are current maintainers.
author_email = clancy.w.james@gmail.com
license = BSD-3
url = https://github.com/marcinglowacki/SHRINE
edit_on_github = False
github_project = SHRINE
keywords = FRBs, dedispersion
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10.4
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
use_2to3=False
package_dir=
    =python
packages = find:
python_requires = >=3.10.4
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    numpy>=1.22.3
    scipy>=1.8.1
    matplotlib>=3.5.2
    extension_helpers>=0.1

[options.package_data]
* = *.rst, *.txt, data/*, data/*/*, data/*/*/*, data/*/*/*/*, data/*/*/*/*/*, data/*/*/*/*/*/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

